styles/_index.scss
.hero {
  padding-bottom: 4rem;

  @media (max-width: 1024px) {
    padding-bottom: 2rem;
  }

  &__arne {
    height: 5.5rem;
    width: auto;
    float: left;
    margin-right: 1rem;

    &::selection {
      background: none;
    }

    &--alt-1 {
      .mouth-1 {
        visibility: hidden;
      }
      .mouth-2 {
        visibility: visible;
      }
    }

    &--alt-2 {
      .eyes-1, .mouth-2 {
        visibility: hidden !important;
      }

      .eyes-2, .tounge {
        visibility: visible;
      }
    }
  }

  &__heading {
    font-size: 3.815rem;
  }

  &__subheading {
    font-size: 3.052rem;
    line-height: 1.2;
  }

  @media (max-width: 960px) {
    &__arne {
      height: 3.052rem;
    }

    &__heading {
      font-size: 2.441rem;
    }

    &__subheading {
      font-size: 1.953rem;
    }
  }
}

.index {
  @include stack;

  &__more {
    display: inline-block;
    color: #aaa;
  }
}

